support upsampling latents

--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -40,7 +40,7 @@
     "from torch.optim import AdamW\n",
     "from torch.nn.modules.loss import MSELoss\n",
     "from torch.functional import F \n",
-    "import debugpy\n",
+    "import einops\n",
     "\n",
     "\n",
     "from src.nn_modules.fourier_2d_generic import SimpleBlock2dGeneric\n",
@@ -155,7 +155,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "multi_img_plot_time(get_obs(data, 0, -1)['x'], n_cols=5, interval=5);\n"
+    "multi_img_plot_time(get_obs(data, 0, -1)['x'], n_cols=4, interval=5);\n"
    ]
   },
   {
@@ -239,9 +239,15 @@
     "    def __init__(self,\n",
     "            process_predictor: \"nn.Module\",\n",
     "            dims = (256,256),\n",
+    "            latent_dims = None,\n",
+    "            interpolation = 'bilinear',\n",
     "            n_batch: int=1):\n",
     "        super().__init__()\n",
     "        self.dims = dims\n",
+    "        if latent_dims is None:\n",
+    "            latent_dims = dims\n",
+    "        self.latent_dims = latent_dims\n",
+    "        self.interpolation = interpolation\n",
     "        self.process_predictor = process_predictor\n",
     "        ## Do not fit the process predictor weights\n",
     "        process_predictor.train(False)\n",
@@ -250,21 +256,26 @@
     "            \n",
     "        self.latent = nn.Parameter(\n",
     "            torch.zeros(\n",
-    "                (n_batch, *dims),\n",
+    "                (n_batch, *latent_dims),\n",
     "                dtype=torch.float32\n",
     "            )\n",
     "        )\n",
     "    \n",
     "    def get_latent(self):\n",
-    "        return self.latent\n",
+    "        if self.latent_dims==self.dims:\n",
+    "            return self.latent\n",
+    "        return F.interpolate(\n",
+    "            self.latent.unsqueeze(1),\n",
+    "            self.dims,\n",
+    "            mode=self.interpolation\n",
+    "        ).squeeze(1)  #squeeze is because of weird interpolate semantics\n",
     "\n",
     "    def weights_init(self, scale=0.005):\n",
     "        self.latent.data.normal_(0.0, scale)\n",
     "\n",
     "    def forward(self, batch):\n",
-    "        #copy\n",
     "        batch = dict(**batch)\n",
-    "        batch['latent'] = self.latent\n",
+    "        batch['latent'] = self.get_latent()\n",
     "        return self.process_predictor(batch)\n",
     "\n"
    ]
@@ -317,17 +328,6 @@
     "        batch['latent'] = self.get_latent()\n",
     "        return self.process_predictor(batch)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flatsig = torch.ones((256, 256))\n",
-    "flatft = torch.fft.rfft2(flatsig, norm='ortho')\n",
-    "flatft"
    ]
   },
   {
@@ -393,9 +393,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.latent.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.latent.unsqueeze(1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = RasterLatent(\n",
     "    process_predictor,\n",
     "    dims=obs['x'].shape[1:3],\n",
+    "    latent_dims=(16,16),\n",
     "    n_batch=1)\n",
     "optimizer = AdamW(\n",
     "    model.parameters(),\n",
@@ -552,24 +571,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs['latent'].device"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.process_predictor.to(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class ProbCyclicLatent(nn.Module):\n",
     "    def __init__(self,\n",
     "            process_predictor: \"nn.Module\",\n",
@@ -590,23 +591,21 @@
     "        self.latent_spect = PyroSample(\n",
     "            dist.Normal(0, prior_scale).expand(\n",
     "                (n_batch, modes*2-1, modes, 2)\n",
-    "            ).to_event(3))\n",
-    "        self.iftop = torch.meshgrid()  # TBC\n",
+    "            ).to_event(2))\n",
     "\n",
     "    def get_latent(self):\n",
-    "        ## complex values do not work in numpyro yet\n",
-    "        # cplx_latent = torch.view_as_complex(self.latent_spect)\n",
-    "        # ft_padded = F.pad(cplx_latent, (\n",
-    "        #     0,  # left\n",
-    "        #     self.dims[1]//2-self.modes, # right\n",
-    "        #     0, # top\n",
-    "        #     (self.dims[0]+1-self.modes), # bottom\n",
-    "        # ), \"constant\", 0)\n",
+    "        ## complex values are flakey in pyro\n",
+    "        cplx_latent = self.latent_spect[...,0] + 1j*self.latent_spect[...,1]\n",
+    "        ft_padded = F.pad(cplx_latent, (\n",
+    "            0,  # left\n",
+    "            self.dims[1]//2-self.modes, # right\n",
+    "            0, # top\n",
+    "            (self.dims[0]+1-self.modes), # bottom\n",
+    "        ), \"constant\", 0)\n",
     "        #\n",
     "        #Return to physical space\n",
-    "        # return torch.fft.irfft2(ft_padded, s=self.dims, norm=\"backward\")\n",
-    "        return \n",
-    "\n",
+    "        return torch.fft.irfft2(ft_padded, s=self.dims, norm=\"backward\")\n",
+    "        \n",
     "    def forward(self, X, y=None):\n",
     "        #overwrite process predictor batch with my own latent\n",
     "        mean = self.process_predictor({\n",
@@ -640,7 +639,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.latent_spect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "np.savez_compressed(\"data/samples1.npz\", mc_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch"
    ]
   },
   {
@@ -665,40 +682,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Fourier2dMapping(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Does not work because I tried to do something fancy with parameterizations.\n",
-    "    TODO.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, modes: int=20, dims=(256,256), prior_scale=0.01, obs_scale=0.01):\n",
-    "        super().__init__()\n",
-    "        self.modes = modes  # maybe just normalize the weights?\n",
-    "        self.dims = dims\n",
-    "        self.prior_scale = prior_scale\n",
-    "        self.obs_scale = obs_scale\n",
-    "\n",
-    "    def forward(self, X):\n",
-    "        \"\"\"\n",
-    "        map from complex inputs on a half space to real inputs on a full space\n",
-    "        \"\"\"\n",
-    "        print(\"X\", X.shape, X.dtype)\n",
-    "        return fft.irfft2(X, s=self.dims, norm=\"ortho\")\n",
-    "\n",
-    "    def right_inverse(self, Xp):\n",
-    "        \"\"\"\n",
-    "        map from real inputs on a full space to complex inputs on a half space\n",
-    "        \"\"\"\n",
-    "        return fft.rfft2(Xp, s=self.dims, norm=\"ortho\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "model = CyclicLatent(\n",
     "    process_predictor,\n",
     "    dims=obs['x'].shape[1:3],\n",
@@ -709,6 +692,26 @@
     "field = model.get_latent().cpu().detach().numpy()\n",
     "field.shape\n",
     "img_plot(field);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cyclic_basis(\n",
+    "        dim_sizes,\n",
+    "        device=None):\n",
+    "    def generate_grid(size):\n",
+    "        return torch.linspace(\n",
+    "            pos_low, pos_high, steps=size,\n",
+    "            device=device)\n",
+    "    grid_list = list(map(generate_grid, dim_sizes))\n",
+    "    pos = torch.stack(torch.meshgrid(*grid_list), dim=-1)\n",
+    "    # pos.shape == [*dim_sizes, n_dims]\n",
+    "    return pos\n",
+    "\n"
    ]
   }
  ],
@@ -731,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
