--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -133,7 +133,7 @@
     "    for ax in axes:\n",
     "        ax.set_axis_off()\n",
     "    for i, ax in zip(steps, axes):\n",
-    "        ax.imshow(x[..., i])\n",
+    "        ax.imshow(x[i,...])\n",
     "    plt.tight_layout()\n",
     "    return fig\n",
     "\n",
@@ -523,10 +523,16 @@
     "            self,\n",
     "            process_predictor: \"nn.Module\",\n",
     "            dims = (256,256),\n",
+    "            latent_dims = (16,16),\n",
+    "            interpolation = \"bilinear\",\n",
     "            prior_scale = 0.01,\n",
     "            obs_scale = 0.01,):\n",
     "        super().__init__()\n",
     "        self.dims = dims\n",
+    "        if latent_dims is None:\n",
+    "            latent_dims = dims\n",
+    "        self.latent_dims = latent_dims\n",
+    "        self.interpolation = interpolation\n",
     "        self.prior_scale = prior_scale\n",
     "        self.obs_scale = obs_scale\n",
     "        self.process_predictor = process_predictor\n",
@@ -534,20 +540,56 @@
     "        ## Do not fit the process predictor weights\n",
     "        for param in self.process_predictor.parameters():\n",
     "            param.requires_grad = False\n",
-    "        self.latent = PyroSample(dist.Normal(0, 0.01).expand(dims).to_event(2))\n",
+    "        self.latent = PyroSample(dist.Normal(0, 0.01).expand(latent_dims).to_event(2))\n",
     "\n",
     "    def get_latent(self):\n",
-    "        return self.latent\n",
+    "        if self.latent_dims==self.dims:\n",
+    "            return self.latent.unsqueeze(0)\n",
+    "        l =  F.interpolate(\n",
+    "            self.latent.unsqueeze(0).unsqueeze(0),\n",
+    "            self.dims,\n",
+    "            mode=self.interpolation\n",
+    "        ).squeeze(0) #squeeze is because of weird interpolate semantics\n",
+    "        # print(\"l\", l.shape)\n",
+    "        return l\n",
     "\n",
     "    def forward(self, X, y=None):\n",
     "        #overwrite process predictor batch with my own latent\n",
     "        mean = self.process_predictor({\n",
     "            'x': X,\n",
-    "            'latent': self.get_latent().unsqueeze(0).to(device) #<- why needed?,\n",
-    "        })['forecast']\n",
-    "        return pyro.sample(\n",
+    "            'latent': self.get_latent(),\n",
+    "        })['forecast'].squeeze(-1)\n",
+    "        # print(\"mean\", mean.shape)\n",
+    "        o = pyro.sample(\n",
     "            \"obs\", dist.Normal(mean, self.obs_scale).to_event(2),\n",
     "            obs=y)\n",
+    "        # print(\"o\", o)\n",
+    "        return o\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ProbRasterLatent(\n",
+    "    process_predictor.to(device),\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    prior_scale=0.01,\n",
+    "    obs_scale=0.01,\n",
+    ")\n",
+    "model.latent\n",
+    "trace = poutine.trace(model).get_trace(obs['x'], obs['y'])\n",
+    "print(trace.format_shapes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "obs = dict_as_tensor(get_obs(data, 0, 2, y=True))\n",
     "\n",
@@ -560,9 +602,130 @@
     "model.to(device)\n",
     "nuts_kernel = NUTS(model, full_mass=False, max_tree_depth=5, jit_compile=True) # high performacne config\n",
     "\n",
-    "mcmc = MCMC(nuts_kernel, num_samples=100, warmup_steps=100, num_chains=1)\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=10, warmup_steps=10, num_chains=1)\n",
     "mcmc.run(obs['x'], obs['y'])\n",
     "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obs['x'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model(obs['x'], obs['y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.latent_spect.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savez_compressed(\"data/samples1.npz\", mc_samples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multi_img_plot_batch(mc_samples['latent']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_samples['latent'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ProbRasterLatent(\n",
+    "    process_predictor.to(device),\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    prior_scale=0.01,\n",
+    "    obs_scale=0.01,\n",
+    ")\n",
+    "model.latent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## offcuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CyclicLatent(\n",
+    "    process_predictor,\n",
+    "    dims=obs['x'].shape[1:3],\n",
+    "    n_batch=1)\n",
+    "model.latent_spect.data[0,5,6,0] = 2\n",
+    "model.latent_spect.data[0,5,5,0] = 1\n",
+    "model.latent_spect.data[0,5,5,1] = 1\n",
+    "field = model.get_latent().cpu().detach().numpy()\n",
+    "field.shape\n",
+    "img_plot(field);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cyclic_basis(\n",
+    "        dim_sizes,\n",
+    "        device=None):\n",
+    "    def generate_grid(size):\n",
+    "        return torch.linspace(\n",
+    "            pos_low, pos_high, steps=size,\n",
+    "            device=device)\n",
+    "    grid_list = list(map(generate_grid, dim_sizes))\n",
+    "    pos = torch.stack(torch.meshgrid(*grid_list), dim=-1)\n",
+    "    # pos.shape == [*dim_sizes, n_dims]\n",
+    "    return pos\n",
+    "\n"
    ]
   },
   {
@@ -631,87 +794,6 @@
     "obs = get_obs(data, 0, 2, y=True)\n",
     "mcmc.run(torch.as_tensor(obs['x']), torch.as_tensor(obs['y']))\n",
     "mc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.latent_spect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savez_compressed(\"data/samples1.npz\", mc_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_img_batch(mc_samples['latent'], interval=20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## offcuts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = CyclicLatent(\n",
-    "    process_predictor,\n",
-    "    dims=obs['x'].shape[1:3],\n",
-    "    n_batch=1)\n",
-    "model.latent_spect.data[0,5,6,0] = 2\n",
-    "model.latent_spect.data[0,5,5,0] = 1\n",
-    "model.latent_spect.data[0,5,5,1] = 1\n",
-    "field = model.get_latent().cpu().detach().numpy()\n",
-    "field.shape\n",
-    "img_plot(field);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cyclic_basis(\n",
-    "        dim_sizes,\n",
-    "        device=None):\n",
-    "    def generate_grid(size):\n",
-    "        return torch.linspace(\n",
-    "            pos_low, pos_high, steps=size,\n",
-    "            device=device)\n",
-    "    grid_list = list(map(generate_grid, dim_sizes))\n",
-    "    pos = torch.stack(torch.meshgrid(*grid_list), dim=-1)\n",
-    "    # pos.shape == [*dim_sizes, n_dims]\n",
-    "    return pos\n",
-    "\n"
    ]
   }
  ],
