--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "def multi_img_plot_time(x, batch=0, interval=1, n_cols=None, fsize=6):\n",
+    "def multi_img_plot_time(x, batch=0, interval=1, n_cols=None, fsize=6, interpolation=None):\n",
     "    \"\"\"\n",
     "    Plot multiple timesteps of an array (time last)\n",
     "    \"\"\"\n",
@@ -113,11 +113,11 @@
     "    for ax in axes:\n",
     "        ax.set_axis_off()\n",
     "    for i, ax in zip(steps, axes):\n",
-    "        ax.imshow(x[batch,..., i])\n",
+    "        ax.imshow(x[batch,..., i], interpolation=interpolation)\n",
     "    plt.tight_layout()\n",
     "    return fig\n",
     "\n",
-    "def multi_img_plot_batch(x, interval=1, n_cols=None, fsize=6):\n",
+    "def multi_img_plot_batch(x, interval=1, n_cols=None, fsize=6, interpolation=None):\n",
     "    \"\"\"\n",
     "    Plot multiple batches of an array \n",
     "    \"\"\"\n",
@@ -133,16 +133,16 @@
     "    for ax in axes:\n",
     "        ax.set_axis_off()\n",
     "    for i, ax in zip(steps, axes):\n",
-    "        ax.imshow(x[i,...])\n",
+    "        ax.imshow(x[i,...], interpolation=interpolation)\n",
     "    plt.tight_layout()\n",
     "    return fig\n",
     "\n",
-    "def img_plot(x, interval=1, n_cols=None, fsize=6):\n",
+    "def img_plot(x, interval=1, n_cols=None, fsize=6, interpolation=None):\n",
     "    \"\"\"\n",
     "    plot whatever image I can find\n",
     "    \"\"\"\n",
     "    x = np.squeeze(x, )\n",
-    "    plt.imshow(x)\n",
+    "    plt.imshow(x, interpolation=interpolation)\n",
     "    plt.gca().set_axis_off()\n",
     "    plt.tight_layout()\n",
     "    return plt.gcf()"
@@ -656,7 +656,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_img_plot_batch(mc_samples['latent']);"
+    "multi_img_plot_batch(mc_samples['latent'], interpolation=\"bilinear\");"
    ]
   },
   {
@@ -665,7 +665,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_samples['latent'].shape"
+    "img_plot(mc_samples['latent'].mean(0), interpolation=\"bilinear\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_samples['latent'].mean(0).shape"
    ]
   },
   {
