missing conditioning text

--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Posterior inference\n",
     "\n",
-    "In this notebook we will address “learning” in the Bayesian context, which ends meaning updating the distributions of the parameters of a model, by conditioning on observed data."
+    "In this notebook we will address “learning” in the Bayesian context, which ends meaning updating the distributions of the parameters of a model, by conditioning on observed data.\n",
+    "Additionally we will uses Monte Carlo methods to do inference."
    ]
   },
   {
@@ -96,6 +97,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In `pyro` one of the inference methods available to us is `MCMC`, the family of Markov Chain Monte Carlo methods. In these methods we use observations to update our prior estimates of the distributions over parameters, and we summarise that posterior distribution empirically - by specifying an algorithm which will simulate from that distribution. MCMC is overkill for this problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's say that I toss the coin one time and it comes up \"heads\", which we code as $\\operatorname{toss}=1.$\n",
     "Let us use pyro to condition on that single observation to update the distribution of the fairness.\n",
     "For this purpose we will simulate from the distribution $\\operatorname{fairness}|\\operatorname{toss}=1$:\n"
@@ -116,9 +124,12 @@
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
     "mcmc.run(toss)\n",
     "\n",
+    "fairness_samples_1 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "\n",
+    "print(f\"We now believe the fairness is {fairness_samples_1.mean():.3f} ± {fairness_samples_1.std()*1.96:.3f}\")\n",
+    "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "fairness_samples_1 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
     "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
@@ -130,9 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I really hope the (red) posterior distribution came out pretty close to the (blue) prior distribution.\n",
-    "\n",
-    "Now, let us suppose that we flipped the coin 5 times and got heads, heads, tails, heads, tails. what does inference for that model look like?\n",
+    "In the model as given, we can only toss the coin once. But what if we have more data?\n",
+    "Let us suppose that we flipped the coin 5 times and got heads each time. What should we now believe about our coint fairness?\n",
     "First we need to update the model to account for multiple observations,\n",
     "\n",
     "$$\\begin{aligned}\n",
@@ -182,23 +192,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running the MCMC inference algorithm:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tosses = torch.tensor([1,1,0,1,0], dtype=torch.float)\n",
+    "tosses = torch.tensor([1,1,1,1,1], dtype=torch.float)\n",
     "pyro.set_rng_seed(102)\n",
     "\n",
     "nuts_kernel = NUTS(model, jit_compile=True)\n",
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
     "mcmc.run(tosses)\n",
     "\n",
+    "fairness_samples_5 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "\n",
+    "print(f\"We now believe the fairness is {fairness_samples_5.mean():.3f} ± {fairness_samples_5.std()*1.96:.3f}\")\n",
+    "\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "fairness_samples_5 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
     "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
@@ -211,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have in fact tossed the coin 100 times in our new Google-funded robotic coin tossing laboratory, and recorded the data in a CSV file. Lets load that up and print the first few observations:"
+    "But wait! Thanks to the new investment program, we have in fact tossed the coin 100 times in our new Google-funded robotic coin tossing laboratory, and recorded the data in a CSV file. Lets load that data up and print the first few observations:"
    ]
   },
   {
@@ -235,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At a thousand observations it starts to feel like using that plate notation might be nice."
+    "At a hundred observations it starts to feel like using that plate notation might be nice."
    ]
   },
   {
@@ -280,13 +300,15 @@
     ")\n",
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
     "mcmc.run(tosses)\n",
+    "fairness_samples_100 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "\n",
+    "print(f\"We now believe the fairness is {fairness_samples_100.mean():.3f} ± {fairness_samples_100.std()*1.96:.3f}\")\n",
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "fairness_samples_100 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
     "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
-    "plt.hist(fairness_samples_100, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.8, label = \"100 observation posterior\")\n",
+    "plt.hist(fairness_samples_100, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 1.0,label = \"100 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.legend(loc=\"upper left\");\n",
@@ -297,29 +319,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is this telling us about the distribution of the fairness parameter?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"We now believe the fairness is {fairness_samples_100.mean():.3f} ± {fairness_samples_100.std()*1.96:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Summarising posterior with distributions\n",
     "\n",
-    "So far we have been using MCMC to summarise the posterior distribution of samples, which is a sound default choice; this method is well-understood and easy(ish) to configure, and is eventually unbiased with respect to many estimands.\n",
+    "So far we have been using MCMC to summarise the posterior distribution of samples.\n",
+    "This method is well-understood and easy(ish) to configure, and is eventually unbiased with respect to most estimands. It is also the classic used in most textbooks.\n",
     "\n",
     "It also has downsides - for example, we have possibly quantified the output of a very simple model with a very large number of random samples.\n",
     "\n",
-    "An alternative approach is to use variation inference, which summarises the posterior distributions with other distributions. (this is in fact how they set it up in the tutorial)\n",
+    "An alternative approach is to use variational inference, which summarises the posterior distributions with other distributions (this is in fact how they set it up in the tutorial).\n",
     "\n",
     "In Pyro terminology these approximation distributions are `guide` distributions and their parameters are captures by `pyro.param`s.\n",
     "We can access these in a default param store, which we get by calling `pyro.get_param_store()`.\n"
