--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -7,10 +7,10 @@
     "# Posterior inference and regression\n",
     "\n",
     "The examples in the previous notebook don’t really show much in the way of fancy prediction; for that we want to do some _regression_.\n",
-    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see also the McElreath book for a really nice discussion of this regression problem.\n",
+    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see e.g. the McElreath book for a practical context of this regression problem.\n",
     "\n",
     "* Pyro does not really have a very good explanation for the `Predictive` class that we use here, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html)\n",
-    "* The best introduction is IMO Florian Whilhelm’s [Bayesian Hierarchical Modelling at Scale](https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/), although that is for the (similar but not identical) numpyro rahter than pyro."
+    "* Also good is Florian Whilhelm’s [Bayesian Hierarchical Modelling at Scale](https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/), although that is for the (similar but not identical) numpyro rather than pyro."
    ]
   },
   {
@@ -23,9 +23,6 @@
    },
    "outputs": [],
    "source": [
-    "from functools import partial\n",
-    "from math import sqrt\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -45,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The task here is to predict country’s GDP in the year 2000 from various other facts about it. Here are the facts we have to work with"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -54,6 +58,13 @@
     "# data from https://d2hg8soec8ck9v.cloudfront.net/datasets/rugged_data.csv\n",
     "rugged_data = pd.read_csv(\"rugged_data.csv\", encoding=\"ISO-8859-1\")\n",
     "rugged_data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, we will predict a country’s GDP from its “ruggedness”, and whether it is in Africa  or not, which we observe interact in a non-trivial way:"
    ]
   },
   {
@@ -74,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term."
+    "Here is the diagram for (Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term."
    ]
   },
   {
