--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -81,7 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can diagram the dependency structure of that model thusly:"
+    "We visualise the models  with [Graphical model diagrams](https://en.wikipedia.org/wiki/Graphical_model).\n",
+    "This one comes out very simple:"
    ]
   },
   {
