--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -7,10 +7,10 @@
     "# Posterior inference and regression\n",
     "\n",
     "The examples in the previous notebook don’t really show much in the way of fancy prediction; for that we want to do some _regression_.\n",
-    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see e.g. the McElreath book for a practical context of this regression problem.\n",
+    "See e.g. the McElreath book for a practical intro to regression in a BAyesian context.\n",
+    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html).\n",
     "\n",
-    "* Pyro does not really have a very good explanation for the `Predictive` class that we use here, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html)\n",
-    "* Also good is Florian Whilhelm’s [Bayesian Hierarchical Modelling at Scale](https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/), although that is for the (similar but not identical) numpyro rather than pyro."
+    "Also good is Florian Whilhelm’s [Bayesian Hierarchical Modelling at Scale](https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/), although that is for the (similar but not identical) numpyro rather than pyro."
    ]
   },
   {
@@ -29,11 +29,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
-    "import torch.distributions.constraints as constraints\n",
     "import pyro\n",
     "import pyro.distributions as dist\n",
     "from pyro.optim import Adam\n",
-    "from pyro.infer import SVI, Trace_ELBO, Predictive, MCMC, NUTS\n",
+    "from pyro.infer import Trace_ELBO, Predictive, MCMC, NUTS\n",
     "import pyro.distributions as dist\n",
     "from pyro import poutine\n",
     "sns.set_theme()\n",
@@ -45,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The task here is to predict country’s GDP in the year 2000 from various other facts about it. Here are the facts we have to work with"
+    "The task here is to predict country’s GDP in the year 2000 from various other facts about it. Here are the facts we have to work with:"
    ]
   },
   {
@@ -64,7 +63,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, we will predict a country’s GDP from its “ruggedness”, and whether it is in Africa  or not, which we observe interact in a non-trivial way:"
+    "In this case, we will predict a country’s GDP from its “ruggedness”, and whether it is in Africa  or not, which we observe interact in a non-trivial way.\n",
+    "We keep this simple by pre-processing the data (and in fact we work with the log-transformed GDP)."
    ]
   },
   {
@@ -85,38 +85,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is the diagram for (Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "graphs.ruggedness_graph(170)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nuts_kernel = NUTS(model)\n",
+    "We define the model as follows,a (Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term.\n",
     "\n",
-    "mcmc = MCMC(nuts_kernel, num_samples=1000, warmup_steps=200)\n",
-    "mcmc.run(is_cont_africa, ruggedness, log_gdp)\n",
+    "$$\\begin{aligned}\n",
+    "\\text{GDP}_i &\\sim \\mathcal{N}(\\mu, \\sigma)\\\\\n",
+    "\\mu &= a + b_a \\cdot \\operatorname{InAfrica}_i + b_r \\cdot \\operatorname{Ruggedness}_i + b_{ar} \\cdot \\operatorname{InAfrica}_i \\cdot \\operatorname{Ruggedness}_i \\\\\n",
+    "a &\\sim \\mathcal{N}(0, 1)\\\\\n",
+    "b_a &\\sim \\mathcal{N}(0, 1)\\\\\n",
+    "b_r &\\sim \\mathcal{N}(0, 1)\\\\\n",
+    "b_{ar} &\\sim \\mathcal{N}(0, 1)\\\\\n",
+    "\\sigma &\\sim \\operatorname{Gamma}(1, \\frac12)\n",
+    "\\end{aligned}$$\n",
     "\n",
-    "hmc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this we need to use the `Predictive` class, which is not well explained in the docs.\n",
-    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
+    "where $\\alpha$ and $\\beta$ are the coefficients of the intercept and the ruggedness coefficient, respectively, and $\\gamma$ is the coefficient of the binary indicator of whether the country is in Africa.\n"
    ]
   },
   {
@@ -132,12 +113,35 @@
     "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
     "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
     "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
-    "    is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Bernoulli(0.5))\n",
-    "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(1.0, 0.5))\n",
+    "    is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Bernoulli(0.5))  # <- overridden\n",
+    "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(1.0, 0.5))        # <- overridden\n",
     "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
-    "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))\n",
+    "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))                 # <- overridden\n",
     "    return s\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note the trick here, that we gave distributions even to inputs that we will get from data; this is how you need to do it, even if that distribution will never by used. During inference we  always override the values at those sites with data. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphs.ruggedness_graph(170)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inference proceeeds by conditioning the model on the observed data, and then sampling from the posterior distribution."
    ]
   },
   {
@@ -164,6 +168,14 @@
    "outputs": [],
    "source": [
     "mcmc.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this we need to use the `Predictive` class, which is not well explained in the docs, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html).\n",
+    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
    ]
   },
   {
