regression text upate

--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -174,8 +174,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this we need to use the `Predictive` class, which is not well explained in the docs, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html).\n",
-    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
+    "To actually make predictions we need to use the `Predictive` class, which is not well explained in the docs, but [you can work it out from their example](http://pyro.ai/examples/predictive_deterministic.html).\n",
+    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation).\n",
+    "\n",
+    "Now, Let us suppose that we wish to found some new nations, by cutting an existing nation in half so as to preserve its ruggedness. What does this model tell us about the GDP of the new nations?"
    ]
   },
   {
@@ -186,30 +188,35 @@
    "source": [
     "colors = sns.color_palette()\n",
     "swiss_rugged = rugged_data[rugged_data['country']=='Switzerland']['rugged'].item()\n",
-    "belgian_rugged = rugged_data[rugged_data['country']=='Belgium']['rugged'].item()\n",
     "swiss_loggdp = np.log(rugged_data[rugged_data['country']=='Switzerland']['rgdppc_2000'].item())\n",
-    "belgian_loggdp = np.log(rugged_data[rugged_data['country']=='Belgium']['rgdppc_2000'].item())\n",
-    "\n",
     "switzerland2_gdp = Predictive(poutine.condition(model, data={\n",
     "    \"ruggedness\": torch.tensor(swiss_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
-    "belgium2_gdp = Predictive(poutine.condition(model, data={\n",
-    "    \"ruggedness\": torch.tensor(belgian_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
     "sns.kdeplot(switzerland2_gdp, label=\"Switzerland 2.0 log GDP\", color=colors[0])\n",
-    "sns.kdeplot(belgium2_gdp, label=\"Belgium 2.0 log GDP\", color=colors[1])\n",
     "plt.vlines(swiss_loggdp, 0, 0.5, label=\"Switzerland 1.0 log GDP\", linestyle=\"dashed\", color=colors[0])\n",
-    "plt.vlines(belgian_loggdp, 0, 0.5, label=\"Belgium 1.0 log GDP\", linestyle=\"dotted\", color=colors[1])\n",
     "\n",
-    "plt.legend()"
+    "pakistan_rugged = rugged_data[rugged_data['country']=='Pakistan']['rugged'].item()\n",
+    "pakistan_loggdp = np.log(rugged_data[rugged_data['country']=='Pakistan']['rgdppc_2000'].item())\n",
+    "pakistan2_gdp = Predictive(poutine.condition(model, data={\n",
+    "    \"ruggedness\": torch.tensor(pakistan_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
+    "plt.vlines(pakistan_loggdp, 0, 0.5, label=\"Pakistan 1.0 log GDP\", linestyle=\"dotted\", color=colors[1])\n",
+    "sns.kdeplot(pakistan2_gdp, label=\"Pakistan 2.0 log GDP\", color=colors[1])\n",
+    "\n",
+    "oz_rugged = rugged_data[rugged_data['country']=='Australia']['rugged'].item()\n",
+    "oz_loggdp = np.log(rugged_data[rugged_data['country']=='Australia']['rgdppc_2000'].item())\n",
+    "oz2_gdp = Predictive(poutine.condition(model, data={\n",
+    "    \"ruggedness\": torch.tensor(oz_rugged), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n",
+    "plt.vlines(oz_loggdp, 0, 0.5, label=\"Australia 1.0 log GDP\", linestyle=\"dotted\", color=colors[2])\n",
+    "sns.kdeplot(oz2_gdp, label=\"Australia 2.0 log GDP\", color=colors[2])\n",
+    "\n",
+    "\n",
+    "plt.legend();"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "trace = poutine.trace(model).get_trace()\n",
-    "print(trace.format_shapes())"
+    "Note that the predictions are not incredibly informative; since we are working with little information, this model predictions have a high variance, but also the model lets us know that we should not be incredibly confident about them."
    ]
   }
  ],
