--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -705,6 +705,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "trace = poutine.trace(model).get_trace()\n",
+    "print(trace.format_shapes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = CyclicLatent(\n",
     "    process_predictor,\n",
     "    dims=obs['x'].shape[1:3],\n",
