--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -13,6 +13,11 @@
     "> Probabilistic programming is about doing statistics using the tools of\n",
     "> computer science.\n",
     "\n",
+    "The kinds of problem that we attempt to solve with probabilistic programming are\n",
+    "ones where the inputs and outputs of programs are not just numbers, but whole\n",
+    "probability distributions the space of possibly values of those numbers. Here,\n",
+    "probability distributions are first class citizens.\n",
+    "\n",
     "Conceptually, probabilistic programming is a way of automating operations in\n",
     "[probabilistic graphical models](https://en.wikipedia.org/wiki/Graphical_model),\n",
     "similarly to how automatic differentiation frameworks (like Pytorch or\n",
@@ -22,14 +27,16 @@
     "terms of a *graphical* model (e.g. if you only have your model as a set of\n",
     "equations). Once that's accomplished, you can use the PPL's built-in functions\n",
     "to perform typical operations on the model, such as sampling, conditioning,\n",
-    "computing probabilities, etc.\n",
+    "computing probabilities, etc. This means that you can do verious nifty things,\n",
+    "like Bayesian inference, uncertainty quantification, experiment design etc.\n",
     "\n",
-    "One important benefit is that you (usually) get backpropagation of gradients for\n",
-    "free. This is extremely useful if you want to apply gradient-based methods for\n",
-    "inference, especially if your model is complex and uses more obscure\n",
-    "distributions than a mixture of Gaussians. We will see over the course of the\n",
-    "hackfest just how quick and easy it is to turn an arbitrary set of equations\n",
-    "into a working probabilistic model that you can then run ML algorithms on.\n"
+    "One important benefit of modern toolkits is that you (usually) get\n",
+    "backpropagation of gradients for free. This is extremely useful if you want to\n",
+    "apply gradient-based methods for inference, especially if your model is complex\n",
+    "and uses more obscure distributions than a mixture of Gaussians. We will see\n",
+    "over the course of the hackfest just how quick and easy it is to turn an\n",
+    "arbitrary set of equations into a working probabilistic model that you can then\n",
+    "run ML algorithms on.\n"
    ]
   },
   {
@@ -46,8 +53,7 @@
     "this hackfest won't become obsolete too quickly.\n",
     "It is built of pytorch, which many of us here already use.\n",
     "Finally, we have more experience inside the FSP with pyro than with any other\n",
-    "PPL.\n",
-    "\n"
+    "PPL."
    ]
   },
   {
