--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -47,13 +47,15 @@
     "\n",
     "There are [too many PPLs](https://en.wikipedia.org/wiki/Probabilistic_programming)!\n",
     "But pyro is the one that is probably closest to gaining critical mass.\n",
-    "It is not the simplest one, but it _does_ integrate high quality versions of hip\n",
-    "neural network methods into the classic PPL methods. This is typically a good\n",
-    "predictor of a framework's longevity, so hopefully the skills you develop in\n",
-    "this hackfest won't become obsolete too quickly.\n",
-    "It is built of pytorch, which many of us here already use.\n",
-    "Finally, we have more experience inside the FSP with pyro than with any other\n",
-    "PPL."
+    "It is not the simplest one, but \n",
+    "\n",
+    "1. it _does_ integrate high quality versions of hip neural network methods into the\n",
+    "   classic PPL methods. This is typically a good predictor of a framework's\n",
+    "   longevity, so hopefully the skills you develop in this hackfest won't become\n",
+    "   obsolete too quickly.\n",
+    "2. It is built of pytorch, which many of us here already use.\n",
+    "3. Finally, we have more experience inside the FSP with pyro than with \n",
+    "   any other PPL."
    ]
   },
   {
