--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -88,12 +88,9 @@
     "  [and a numpyro](https://github.com/asuagar/statrethink-course-in-numpyro/) version.\n",
     "* Kevin Murphy, [Probabilistic Machine Learning: An Introduction](https://probml.github.io/pml-book/book1.html)\n",
     "* Wi Ji Ma, Konrad Paul Kording, Daniel Goldreich, [Bayesian models of perception and action](https://www.bayesianmodeling.com)\n",
-    "* Noah D. Goodman, Joshua B. Tenenbaum et al, [Probabilistic Models of Cognition - 2nd Edition](http://probmods.org/)\n",
+    "* Noah D. Goodman, Joshua B. Tenenbaum et al, [Probabilistic Models of Cognition](http://probmods.org/)\n",
     "* Noah D. Goodman and Andreas Stuhlmüller, [The Design and Implementation of Probabilistic Programming Languages](http://dippl.org/)\n",
-    "* [Bayesian statistics for _Nature_ readers](https://www.nature.com/articles/s43586-020-00001-2)\n",
-    "\n",
-    "\n",
-    "\n"
+    "* [Bayesian statistics for _Nature_ readers](https://www.nature.com/articles/s43586-020-00001-2)\n"
    ]
   }
  ],
